kubernetes/deploy/proxies/internal/netbox/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: netbox
spec:
  ports:
  - protocol: TCP
    port: 7000
    name: http
    targetPort: 7000
