kubernetes/deploy/proxies/internal/netbox/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: netbox
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`netbox.vandeneede.org`)
    services:
    - name: netbox
      port: 7000
